--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'com.github.corouteam:GlideToVectorYou:v2.0.0'
     implementation 'com.github.bumptech.glide:glide:4.10.0'
+    implementation 'com.google.android.material:material:1.5.0'
 
 }
